# Butler

./: .env.example  .gitignore  Makefile  PROJECT.md  README.md  pyproject.toml
.agents/skills/butler-cyber-radar/: SKILL.md
config/launchd/: com.butler.breach-consumer.plist  com.butler.cyber-radar.plist
docs/: architecture.md  cyber-radar.md  ecosystem.md  migration-from-candy.md
docs/decisions/: 0001-modular-monolith.md
migration/candy/: README.md
migration/candy/workflows/: candy-daily-digest.json  candy-feedback-loop.json  candy-source-ingest.json
scripts/: configure_telegram.sh  install_breach_consumer.sh  install_launch_agent.sh  uninstall_breach_consumer.sh  uninstall_launch_agent.sh
src/butler/: __init__.py  __main__.py  config.py  observability.py
src/butler/core/: __init__.py  research.py  tasks.py
src/butler/integrations/: breach_outbox.py  http.py  inventory.py  llm.py  macos.py  n8n.py  notifications.py  sources.py  telegram.py
src/butler/interfaces/: __init__.py  cli.py
src/butler/memory/: __init__.py  research.py  sqlite.py
src/butler/policies/: __init__.py  autonomy.py
src/butler/research/: __init__.py  rendering.py  scoring.py  service.py
src/butler/services/: __init__.py  tasks.py
src/butler/skills/: __init__.py  (+1 more)
tests/: test_autonomy.py  test_breach_outbox.py  test_notifications.py  test_radar_service.py  test_registries.py  test_research_domain.py  test_research_repository.py  test_research_scoring.py  test_sources.py  test_tasks.py
tests/fixtures/: cisa_kev.json  feed.xml  github_advisories.json  index.html  nvd.json
(+3 files in other folders)
